# FranxCode

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/editor/: Cargo.toml
src-tauri/editor/src/: cursor.rs  edit.rs  history.rs  lib.rs  lsp.rs  project.rs  syntax.rs
src-tauri/editor/src/queries/: c.scm  cpp.scm  css.scm  go.scm  html.scm  javascript.scm  python.scm  rust.scm  typescript.scm
src-tauri/icons/: icon.icns
src-tauri/src/: api-prompt.txt  main.rs
